--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <!--Css-->
     <link rel="stylesheet" href="src/css/reset.css">
     <link rel="stylesheet" href="src/css/global.css">
+    <link rel="stylesheet" href="src/css/cartao.css">
     <!--Icon-->
     <link rel="shortcut icon" href="src/imagens/favicon.ico" type="image/x-icon">
     <!--Fonts-->
@@ -19,7 +20,7 @@
     <main>
         <div class="pokedex">
             <div class="cartoes-pokemon">
-                <div class="cartao-pokemon">
+                <div class="cartao-pokemon aberto tipo-eletrico">
                     <div class="cartao-topo">
                         <div class="detalhes">
                             <h2 class="nome">Pikachu</h2>
@@ -137,7 +138,7 @@
                             <span>#004</span>
                         </div>
 
-                        <span class="tipo">Dragão</span>
+                        <span class="tipo">Água</span>
 
                         <div class="cartao-imagem">
                             <img src="src/imagens/gyarados.png" alt="Imagem do Gyarados">
