--- a/index.html
+++ b/index.html
@@ -9,8 +9,11 @@
     <link rel="stylesheet" href="src/css/reset.css">
     <link rel="stylesheet" href="src/css/global.css">
     <link rel="stylesheet" href="src/css/cartao.css">
+    <link rel="stylesheet" href="src/css/listagem.css">
+
     <!--Icon-->
     <link rel="shortcut icon" href="src/imagens/favicon.ico" type="image/x-icon">
+
     <!--Fonts-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -245,7 +248,7 @@
 
             <nav class="listagem">
                 <ul>
-                    <li class="pokemon">
+                    <li class="pokemon ativo ">
                         <img src="src/imagens/cabeca-pikachu.png" alt="Cabeça do Pikachu">
                         <span>Pikachu</span>
                     </li>
