--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="src/css/global.css">
     <link rel="stylesheet" href="src/css/cartao.css">
     <link rel="stylesheet" href="src/css/listagem.css">
+    <link rel="stylesheet" href="src/css/responsive.css">
 
     <!--Icon-->
     <link rel="shortcut icon" href="src/imagens/favicon.ico" type="image/x-icon">
